# pluginloader-cpp

./: .gitignore  CMakeLists.txt  README.md
include/: PluginLoader.h
include/pluginloader/: pluginloader.h
scripts/: build.sh  prepare-build.sh
src/: PluginLoader.cpp  PluginLoaderImpl_linux.h  PluginLoaderImpl_windows.h  PluginLoader_linux.cpp
test/: main.cpp
